linkeo de botones y menus

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav_logo">
-                <h2 class="nav_title">Fundación Danielle Mitterrand Agua y Vida</h2>
+                <h2 class="nav_title" id="inicio">Fundación Danielle Mitterrand Agua y Vida</h2>
             </div>
             <ul class="nav_link nav_link--menu">
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Inicio</a>
+                    <a href="#inicio" class="nav_links">Inicio</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Acerca de</a>
+                    <a href="#acercade" class="nav_links">Acerca de</a>
                 </li>
                 <li class="nav_items">
-                    <a href="#" class="nav_links">Contactanos</a>
+                    <a href="#inscription" class="nav_links">Contactanos</a>
                 </li>
                 <img src="./assets/icons/x_movil_menu.svg" alt="icono menu para cerrar de movil" class="nav_close">
             </ul>
@@ -31,12 +31,12 @@
         <section class="hero_container container">
             <h1 class="hero_title">Construyendo Caminos hacia un Futuro Sostenible</h1>
             <p>Educación, Innovación y Compromiso Ambiental para el Sector Transporte y las Comunidades Colombianas</p>
-            <a href="#" class="cta">Comienza ahora</a>
+            <a href="#inscription" class="cta">Comienza ahora</a>
         </section>
     </header>
 
     <main>
-        <section class="container about">
+        <section class="container about" id="acercade">
             <h2 class="subtitle">¡Capacítate con Nosotros y Construye el Futuro del Transporte Multimodal!</h2>
             <p class="about_paragraph"> En la Fundación DM Agua y Vida, creemos en el poder de la educación para transformar vidas y comunidades. Únete a nuestros programas de formación en logística ferroviaria, gestión ambiental y economía solidaria, y conviértete en un agente de cambio para el desarrollo sostenible de Colombia.
             No pierdas esta oportunidad de adquirir conocimientos prácticos, establecer vínculos duraderos y contribuir al progreso del país. ¡Inscríbete hoy mismo y forma parte de nuestra comunidad de líderes comprometidos con el futuro! </p>
@@ -80,7 +80,7 @@
                             <p class="knowledge_paragraph">Nacido en Quibdó, <strong>Duilio Salazar Quesada</strong> es un líder comprometido con el desarrollo sostenible y la educación en Colombia. <b>En 2005, fundó la Fundación DM Agua y Vida (anteriormente Cetransmodal) en Bogotá</b>, con la visión de transformar el sector del transporte multimodal y promover prácticas ambientales responsables.
 
                             Con una trayectoria destacada en la gestión de proyectos educativos y comunitarios, Duilio ha liderado iniciativas que benefician a comunidades vulnerables, promoviendo la inclusión social y el restablecimiento de derechos étnicos.</p>
-                            <a href="#" class="cta">Conocenos</a>
+                            <a href="#inscription" class="cta">Conocenos</a>
                     </div>
                     <figure class="knowledge_picture">
                         <img src="./assets/img/img_profile.png" alt="duilio salazar" class="knowledge_img">
@@ -205,18 +205,18 @@
                 <h2 class="footer_title">Fundacion DM Agua y vida</h2>
                 <ul class="nav_link nav_link--footer">
                     <li class="nav_items">
-                        <a href="#" class="nav_links">Inicio</a>
+                        <a href="#inicio" class="nav_links">Inicio</a>
                     </li>
                     <li class="nav_items">
-                        <a href="#" class="nav_links">Acerca de</a>
+                        <a href="#acercade" class="nav_links">Acerca de</a>
                     </li>
                     <li class="nav_items">
-                        <a href="#" class="nav_links">Contactanos</a>
+                        <a href="#inscription" class="nav_links">Contactanos</a>
                     </li>
                 </ul>
             </nav>
 
-            <form action="https://formsubmit.co/arenavrcol@gmail.com" method="POST" class="footer_form">
+            <form action="https://formsubmit.co/arenavrcol@gmail.com" method="POST" class="footer_form" id="inscription">
                 <h2 class="footer_newsletter">Inscribete ahora!</h2>
                 <div class="footer_inputs">
                     <label for="name">Nombres y Apellidos</label>
