--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     <input name="email" type="email" placeholder="Email" class="footer_input">
                     <input type="submit" value="Registrate" class="footer_submit">
 
-                    <input type="hidden" name="_next" value="https://pagespruebas.site/">
+                    <input type="hidden" name="_next" value="http://fundaciondmaguayvida.org">
                     <input type="hidden" name="_captcha" value="false">
 
                 </div>
