--- a/index.html
+++ b/index.html
@@ -220,15 +220,18 @@
                 <h2 class="footer_newsletter">Inscribete ahora!</h2>
                 <div class="footer_inputs">
                     <label for="name">Nombres y Apellidos</label>
-                    <input name="name" type="text" class="nombres">
+                    <input name="Nombres" type="text" class="nombres">
                     <label for="phone">Numero de telefono</label>
-                    <input name="phone" type="tel" class="telefono">
+                    <input name="Telefono" type="tel" class="telefono">
                     <label for="email">Correo electrónico</label>
-                    <input name="email" type="email" placeholder="Email" class="footer_input">
+                    <input name="Correo electronico" type="email" placeholder="Email" class="footer_input">
                     <input type="submit" value="Registrate" class="footer_submit">
+
 
                     <input type="hidden" name="_next" value="fundaciondmaguayvida.org">
                     <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_subject" value="Nuevo mensaje desde mi sitio web">
+                    <input type="hidden" name="_template" value="table">
 
                 </div>
             </form>
