--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </ul>
             </nav>
 
-            <form action="https://formsubmit.co/your@email.com" method="POST" class="footer_form" id="inscription">
+            <form action="https://formsubmit.co/dmaguayvida@gmail.com" method="POST" class="footer_form" id="inscription">
                 <h2 class="footer_newsletter">Inscribete ahora!</h2>
                 <div class="footer_inputs">
                     <label for="name">Nombres y Apellidos</label>
