--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </ul>
             </nav>
 
-            <form action="https://formsubmit.co/dmaguayvida@gmail.com" method="POST" class="footer_form" id="inscription">
+            <form action="https://formsubmit.co/dmaguayvida@gmail.com" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" class="footer_form" id="inscription">
                 <h2 class="footer_newsletter">Inscribete ahora!</h2>
                 <div class="footer_inputs">
                     <label for="name">Nombres y Apellidos</label>
@@ -232,6 +232,8 @@
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_subject" value="Nuevo mensaje desde mi sitio web">
                     <input type="hidden" name="_template" value="table">
+                    <input type="hidden" name="_autoresponse" value="Gracias por contactarnos. Te responderemos pronto.">
+
 
                 </div>
             </form>
