--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <input type="submit" value="Registrate" class="footer_submit">
 
         <!-- Campos de configuración corregidos -->
-        <input type="hidden" name="_next" value="https://fundaciondmaguayvida.org/">
+        <input type="hidden" name="_next" value="https://fundaciondmaguayvida.org/#inicio">
         <input type="hidden" name="_captcha" value="true">
         <input type="hidden" name="_subject" value="Nueva inscripción - Fundación DM Agua y Vida">
         <input type="hidden" name="_template" value="table">
