--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
         <!-- Campos de configuración corregidos -->
         <input type="hidden" name="_next" value="https://fundaciondmaguayvida.org/gracias.html">
-        <input type="hidden" name="_captcha" value="true">
+        <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_subject" value="Nueva inscripción - Fundación DM Agua y Vida">
         <input type="hidden" name="_template" value="table">
         <input type="hidden" name="_autoresponse" value="¡Gracias por inscribirte! Nos contactaremos contigo pronto para más información sobre nuestros programas.">
